Minirreproductor funcional muestra la ilustración del album

--- a/AppMusic/src/app/home/home.page.html
+++ b/AppMusic/src/app/home/home.page.html
@@ -1,42 +1,87 @@
-<ion-header >
-  <ion-toolbar [translucent]="true" [style.--background]="backgroundColor"]>
+<ion-header  >
+  <ion-toolbar  [style.--background]="backgroundColor"]>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content [style.--background]="backgroundColor"]>
-
+  <ion-header>
+    <ion-toolbar>
+      <ion-buttons class="ion-margin-end" style="border-radius: 10px;" slot="end">
+        <ion-menu-button ></ion-menu-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  @if (loaded) {
   <swiper-container 
-    slides-per-view="1"
+    slides-per-view="2"
     [loop]="true"
     class="my-custom-swiper"
   >
-    <swiper-slide  *ngFor="let genre of musicalGenres">
+    <swiper-slide  *ngFor="let album of albums">
 
-      <ion-card  class="slide-content" [style.background-color]="colorCard" [style.color]="colorText" >
-        <img  class="slide-image" src="{{ genre.imageUrl }}" alt="{{ genre.name }}" />
-        <ion-card-header >
-          <ion-card-title [style.color]="colorTitle">{{ genre.name }}</ion-card-title>
+      <ion-card (click)="loadSongsByAlbum(album.id)"  class="slide-content" [style.background-color]="colorCard" [style.color]="colorText" >
+        <img  class="slide-image" [src]="album.image" alt="{{ album.name }}" />
+        <ion-card-header class="ion-justify-content-start ion-no-padding ion-padding-top" >
+          <ion-card-title [style.color]="colorTitle">{{ album.name }}</ion-card-title>
         </ion-card-header>
-        <ion-card-content style="font-size: 1.2em; text-align: justify;">{{ genre.description }}</ion-card-content>
+        <ion-card-content class="card-content">{{ album.label }} - {{ album.release_date }}</ion-card-content>
         <ion-grid style="padding: 0px;">
           <ion-row>
-            <ion-col *ngFor="let subgenre of genre.subgenres" size="auto" style="padding: 0px;">
-              <ion-chip >{{ subgenre }}</ion-chip>
+            <ion-col *ngFor="let genre of album.genres"  >
+              <ion-chip class="ion-no-padding ion-no-margin">{{ genre }}</ion-chip>
             </ion-col>
           </ion-row>
         </ion-grid>
       </ion-card>
     </swiper-slide>
   </swiper-container>
-  <div>
-    <ion-button class="ion-text-center" fill="outline" expand="block" (click)="changeTheme()">
-      Change Theme
-    </ion-button>
-  </div>
+  } @else {
+    <ion-spinner color="medium" class="ion-margin ion-padding" style="width: 100%; height: 100px;"></ion-spinner>
+  }
 
-  <div>
-    <ion-button (click)="goToIntro()" fill="outline" expand="block" fill="clear" shape="round">
-      Go to intro
-    </ion-button>
-  </div>
 </ion-content>
+
+
+<ion-footer >
+  <ion-grid>
+    <ion-row >
+      <ion-col class="ion-padding">
+        <ion-text  color="primary">
+          <h3 class="ion-no-margin ion-text-center" >{{ songSelected.name || "Escucha una canción"}}</h3>
+        </ion-text>
+      </ion-col>
+      <ion-col class=" ion-padding ion-text-center">
+        <ion-icon style="font-size: 1.5em;" name="heart"></ion-icon>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col class="ion-text-start" >
+        <ion-text color="primary">
+          <p class="ion-no-margin ion-margin-start">{{formatDuration(elapsedMs) || "0:00"}}</p>
+        </ion-text>
+      </ion-col>
+      <ion-col class= "ion-text-end">
+        <ion-text color="primary">
+          <p class="ion-no-margin ion-margin-end">{{getRemainngTime() || "0:00"}}</p>
+        </ion-text>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+    <ion-progress-bar class="ion-no-margin ion-no-padding" [value]="progressValue"></ion-progress-bar>
+  <ion-grid >
+    <ion-row class="ion-padding ion-text-center">
+      <ion-col>
+        <ion-icon style="font-size: 1.8em;" name="play-skip-back-outline"></ion-icon>
+      </ion-col>
+      <ion-col>
+        <ion-icon style="font-size: 1.8em;" *ngIf="!songSelected.playing" name="play" (click)="play()"></ion-icon>
+        <ion-icon style="font-size: 1.8em;" *ngIf="songSelected.playing" name="pause-outline" (click)="pause()"></ion-icon>
+      </ion-col>
+      <ion-col >
+        <ion-icon style="font-size: 1.8em;" name="play-skip-forward-outline"></ion-icon>
+      </ion-col>
+    </ion-row>
+    
+  </ion-grid>
+</ion-footer>
